--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #121212;
+    background-color: #548B54;
     overflow: hidden;
 }
 
@@ -15,18 +15,26 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: #121212;
+    background-color: #548B54;
+
 }
 
 #splash img {
     max-width: 50%;
     max-height: 50%;
-    animation: fade-in-out 5s forwards;
+    animation: popUp 5s ease-out;
 }
 
-@keyframes fade-in-out {
-    0% { opacity: 0; }
-    25% { opacity: 1; }
-    75% { opacity: 1; }
-    100% { opacity: 0; }
+@keyframes popUp {
+    0% {
+        transform: scale(0.5);
+        opacity: 0;
+    }
+    50% {
+        transform: scale(1.1);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1);
+    }
 }
