Redesigned the home page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -253,7 +253,7 @@ outline: transparent;
     align-items: center;
     border-top: 1px solid #548B54;
     border-bottom: 1px solid #548B54;
-    background-color: #DCDCDC;
+    background-color: white;
     height: 150px;
 }
 .inter-btn{
